syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 2427
// EnetChannelId: 0
// EnetIsReliable: true
message TowerEnterLevelRsp {
	int32 retcode = 14;
	uint32 floor_id = 6;
	uint32 level_index = 8;
	repeated uint32 tower_buff_id_list = 7;
}
